--- a/project.html
+++ b/project.html
@@ -66,6 +66,14 @@
               <p>基于 MFC 框架开发的医学图像处理工具</p>
               <a href="https://github.com/wht0909/LungVision" target="_blank">View Code</a>
             </article>
+
+            <!-- Card 5 -->
+            <article class="card">
+              <img src="./imgs/TOXICS_Logo.png" alt="TOXICS">
+              <h3>TOXICS</h3>
+              <p>化合物 / 药物毒理学数据库系统</p>
+              <a href="https://github.com/WHT0909/TOXICS-Webserver" target="_blank">View Code</a>
+            </article>
           </section>
       </div>
     </main>
