修改HaBaGa链接错误的问题

--- a/project.html
+++ b/project.html
@@ -64,7 +64,7 @@
               <img src="./imgs/HaBaGa_Logo.png" alt="HaBaGa">
               <h3>HaBaGa</h3>
               <p>基于 MFC 框架开发的医学图像处理工具</p>
-              <a href="https://github.com/wht0909/LungVision" target="_blank">View Code</a>
+              <a href="https://github.com/shangshulin/MyPhotoshop" target="_blank">View Code</a>
             </article>
 
             <!-- Card 5 -->
