--- a/resume.html
+++ b/resume.html
@@ -119,7 +119,7 @@
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <h4>Compound / Drug Toxicity Database Construction & Mining</h4>
-              <p class="date">Dec 2024 – Present | Second Responsible</p>
+              <p class="date">Dec 2024 – Oct 2025 | Second Responsible</p>
               <p>
                 Built a comprehensive online toxicity database with MySQL & Flask; implemented multi-condition query,
                 pagination, CSV export and ML-based toxicity prediction. Collected and cleaned large-scale public data
@@ -159,6 +159,7 @@
         <ul class="award-list">
           <li>16th National College Mathematics Competition (Non-Math A) – Provincial Second Prize</li>
           <li>16th Lanqiao Cup Software Contest (C/C++ Group A) – Provincial Third Prize</li>
+          <li>2024 - 2025 Sichuan University Second-Class Scholarship (Single Subject)</li>
         </ul>
       </div>
     </main>
