修改project页显示方式+微调resume页圆点
1. project页面一行显示三个项目图标，并把介绍换成了英文
2. 微调了resume页面的timeline-dot的位置

--- a/project.html
+++ b/project.html
@@ -6,6 +6,14 @@
   <title>Wang Haotian – Project</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    /* 调整max-width 修改为一行显示三个项目图标 */
+    .project-content{
+      text-align: center;
+      max-width: 950px;
+      padding: 30px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -22,32 +30,27 @@
 
       <button class="theme-toggle" id="theme-toggle">🌙</button>
 
-      <div class="social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-      </div>
       <p class="copyright">Copyright © 2025 All rights reserved.</p>
     </aside>
 
     <!-- Main Content -->
     <main class="main">
-      <div class="content">
+      <div class="project-content">
         <h2>My Projects</h2>
           <section class="cards">
-            <!-- Card 1 -->
+            <!-- Card 1
              <article class="card">
               <img src="./imgs/iAVP-RFVOT_Logo.png" alt="iAVP-RFVOT">
               <h3>iAVP-RFVOT</h3>
-              <p>基于集成学习的抗病毒肽预测模型，论文发表于 Biochemistry 期刊</p>
+              <p>An antiviral peptide prediction model based on ensemble learning, published in <i>Biochemistry</i></p>
               <a href="https://pubs.acs.org/doi/10.1021/acs.biochem.5c00237" target="_blank">View Article</a>
-            </article>
+            </article> -->
             
             <!-- Card 2 -->
             <article class="card">
               <img src="./imgs/PaperFinding_Logo.png" alt="PaperFinding">
               <h3>PaperFinding</h3>
-              <p>生物医学文献检索系统，内置智能问答助手 Deepseek</p>
+              <p>Biomedical literature retrieval system, featuring the built-in intelligent Q&A assistant Deepseek</p>
               <a href="https://github.com/WHT0909/PaperFinding" target="_blank">View Code</a>
             </article>
 
@@ -55,7 +58,7 @@
             <article class="card">
               <img src="./imgs/LungVision_Logo.png" alt="LungVision">
               <h3>LungVision</h3>
-              <p>胸部 X-Ray 图像处理软件，集成 5 种图像增强和 5 种图像分割算法，用于检测病灶区域</p>
+              <p>Chest X-Ray image processing software, integrating 5 image enhancement and 5 image segmentation algorithms for detecting lesion areas</p>
               <a href="https://github.com/wht0909/LungVision" target="_blank">View Code</a>
             </article>
 
@@ -63,7 +66,7 @@
             <article class="card">
               <img src="./imgs/HaBaGa_Logo.png" alt="HaBaGa">
               <h3>HaBaGa</h3>
-              <p>基于 MFC 框架开发的医学图像处理工具</p>
+              <p>Medical image processing tool developed using the MFC framework</p>
               <a href="https://github.com/shangshulin/MyPhotoshop" target="_blank">View Code</a>
             </article>
 
@@ -71,7 +74,7 @@
             <article class="card">
               <img src="./imgs/TOXICS_Logo.png" alt="TOXICS">
               <h3>TOXICS</h3>
-              <p>化合物 / 药物毒理学数据库系统</p>
+              <p>Compound/Drug toxicology database system</p>
               <a href="https://github.com/WHT0909/TOXICS-Webserver" target="_blank">View Code</a>
             </article>
           </section>
