修改iAVP-RFVOT文章的引用格式

--- a/resume.html
+++ b/resume.html
@@ -140,7 +140,7 @@
         <h2 class="section-title">Publications</h2>
         <ul class="publication-list">
           <li>
-            <strong>Wang H</strong>, Li R, Yu Q, Jiang L, Luo X, Zou Q, Lv Z. iAVP-RFVOT: Identify Antiviral Peptides by Random Forest Voting Machine Learning with Unified Manifold Learning Embedded Features. <em>Biochemistry</em>. 2025 Jul 15;64(14):3137-3147. doi: 10.1021/acs.biochem.5c00237. Epub 2025 Jun 24. PMID: 40555408.
+            <strong>Wang H</strong>, Li R, Yu Q, Jiang L, Luo X, Zou Q, Lv Z: iAVP-RFVOT: Identify Antiviral Peptides by Random Forest Voting Machine Learning with Unified Manifold Learning Embedded Features. Biochemistry 2025, 64(14):3137-3147.
           </li>
           <li>
             Li R, <strong>Wang H</strong>, Yu Q, Cai J, Jiang L, Luo X, Zou Q, Lv Z. AOPxSVM: A Support Vector Machine for Identifying Antioxidant Peptides Using a Block Substitution Matrix and Amino Acid Composition, Transformation, and Distribution Embeddings. <em>Foods</em>. 2025 Jun 6;14(12):2014. doi: 10.3390/foods14122014. PMID: 40565623; PMCID: PMC12192177.
