--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
     <aside class="sidebar">
       <div class="logo">W</div>
       <nav>
-        <a href="index.html">ABOUT ME</a>
-        <a href="resume.html">MY RESUME</a>
-        <a href="project.html">MY PROJECTS</a>
+        <a href="index.html">ABOUT</a>
+        <a href="resume.html">RESUME</a>
+        <a href="project.html">PROJECTS</a>
         <a href="contact.html" class="active">CONTACT</a>
       </nav>
 
