--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wang Haotian – About Me</title>
+  <title>Wang Haotian – ABOUT</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -14,9 +14,9 @@
     <aside class="sidebar">
       <div class="logo">W</div>
       <nav>
-        <a href="index.html" class="active">ABOUT ME</a>
-        <a href="resume.html">MY RESUME</a>
-        <a href="project.html">MY PROJECTS</a>
+        <a href="index.html" class="active">ABOUT</a>
+        <a href="resume.html">RESUME</a>
+        <a href="project.html">PROJECTS</a>
         <a href="contact.html">CONTACT</a>
       </nav>
 
