--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
       flex-wrap: wrap;
       gap: 6px;
       justify-content: center;
-      margin: 15px 0px;
+      margin: 0px 0px;
     }
     
     .tech-stack span {
@@ -50,9 +50,9 @@
     <aside class="sidebar">
       <div class="logo">W</div>
       <nav>
-        <a href="index.html">ABOUT ME</a>
-        <a href="resume.html">MY RESUME</a>
-        <a href="project.html" class="active">MY PROJECTS</a>
+        <a href="index.html">ABOUT</a>
+        <a href="resume.html">RESUME</a>
+        <a href="project.html" class="active">PROJECTS</a>
         <a href="contact.html">CONTACT</a>
       </nav>
 
@@ -64,7 +64,7 @@
     <!-- Main Content -->
     <main class="main">
       <div class="project-content">
-        <h2>My Projects</h2>
+        <h2>PROJECTS</h2>
           <section class="cards">        
             <!-- Card 1 -->
             <article class="card">
