修改view code的下划线颜色，满足黑夜模式

--- a/project.html
+++ b/project.html
@@ -77,7 +77,7 @@
                 </div>
               </h3>
               <p>Biomedical literature retrieval system, featuring the built-in intelligent Q&A assistant Deepseek</p>
-              <a href="https://github.com/WHT0909/PaperFinding" target="_blank" style="color: var(--accent);">View Code</a>
+              <a href="https://github.com/WHT0909/PaperFinding" target="_blank" class="card-link">View Code</a>
             </article>
 
             <!-- Card 2 -->
